--- a/templates/404.html
+++ b/templates/404.html
@@ -21,9 +21,9 @@
     <div class="error_page error_2">
       <div class="container inner-wrapper">
         <h1 class="display-1 error-heading">404</h1>
-        <h2 class="error-code">Page Not Found</h2>
-        <p class="error-message">The page you are looking for might have been removed had its name changed or is temporarily unavailable.</p>
-        <a href="#" class="btn btn-primary">Back to Home</a>
+        <h2 class="error-code">Sahifa topilmadi</h2>
+        <p class="error-message">Siz kiritgan sahifa hozirda mavjud emas.</p>
+        <a href="{% url 'main:home' %}" class="btn btn-primary">Bosh sahifaga qaytish</a>
       </div>
     </div>
     <!--page body ends -->
