--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -15,10 +15,10 @@
 </style>
 <nav class="t-header">
     <div class="t-header-brand-wrapper">
-        <a href="#">
-            <img class="logo" src="{% static 'assets/images/sportApp.png' %}" alt="">
-            <img class="logo-mini" src="{% static 'assets/images/sportApp.png' %}" alt="">
-        </a>
+        <a href="index.html">
+            <img class="logo" src="{% static 'assets/images/app.png' %}" alt="">
+            <img class="logo-mini" src="{% static 'assets/images/logo_mini.svg' %}" alt="">
+          </a>
     </div>
     <div class="t-header-content-wrapper pr-5">
         <div class="t-header-content">
@@ -197,10 +197,6 @@
                 </div>
             </div>
         </div>
-        <!-- content viewport ends -->
-        <!-- partial:partials/_footer.html -->
-        <!-- partial -->
     </div>
-    <!-- page content ends -->
 </div>
 {% endblock %}
